--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "rust-template"
+name = "TTT-Tournament"
 version = "0.1.0"
-authors = ["Near Inc <hello@near.org>"]
+authors = ["Min Qian Lu <minqianlu.testnet>"]
 edition = "2018"
 
 [lib]
